- added: auto verifying directories
- added: framework.onCompileCSS(filename, output) :: must return {String} (if is declared then auto-vendor-prefixes and internal LESS CSS are disabled)
- added: framework.onCompileJS(filename, output) :: must return {String} (if is declared then internal JavaScript minificator is disabled)

- updated: process.name
- updated: empty-project and NPM executable
- updated: expression() - added internal cache
- updated: nosql embedded database (supports stored functions)

- removed: utils.loadFromFile()

- clean code

======= 1.2.4-3

- added: controller.isConnected - indicating whether the client is still connected to the server

- updated: framework.usage()
- updated: examples (server-sent-events, live-streaming)
- updated: nosql

- removed: Object.dispose(), conflict with rethinkdb (www.rethinkdb.com)

- fixed: avoid response exception (if is a client disconnected)

======= 1.2.4-2

- added: Server-Sent Events - One Way Messaging (http://www.w3schools.com/html/html5_serversentevents.asp)
- added: new route flag "sse" - [s]erver [s]ent [e]vents
- added: new route flag "mmr" - [m]ultipart/x-[m]ixed-[r]eplace
- added: controller.sse(data, [eventname], [id], [retry]) - Server-sent events
- added: controller.lastEventID (server-sent events - Last-Event-ID)
- added: controller.mmr(filename, [stream], [callback]) - multipart/x-mixed-replace
- added: controller.close() - close opened connection
- added: new Server sent events example (https://github.com/petersirka/partial.js/tree/master/examples/server-sent-events)

!!! IMPORTANT !!!

- removed: controller.mixed   - alternative: controller.mmr()
- removed: route flag "mixed" - alternative: "mmr"

======= 1.2.4-1

- added: auto skipping minified JS or CSS - filename must contain scriptname[-min.js(.css)] or scriptname[.min.js(.css)]
- added: file streaming via multipart/x-mixed-replace (https://github.com/petersirka/partial.js/tree/master/examples/live-streaming)