@@ -5,12 +5,18 @@ IN DEVELOPMENT ======= 1.2.4-4
 - added: auto verifying directories
 - added: framework.onCompileCSS(filename, output) :: must return {String} (if is declared then auto-vendor-prefixes and internal LESS CSS are disabled)
 - added: framework.onCompileJS(filename, output) :: must return {String} (if is declared then internal JavaScript minificator is disabled)
+- added: utils.copy(target, source, rewrite);
+- added: partial.js/mail attachment
 
 - updated: process.name
 - updated: empty-project and NPM executable
 - updated: expression() - added internal cache
 - updated: nosql embedded database (supports stored functions)
+- updated: partial.js/mail (complete rewrite module)
 
+- fixed: partial.js/mail SMTP user authorization
+
+- removed: partial.js/mail.send()
 - removed: utils.loadFromFile()
 
 - clean code
